@@ -26,6 +26,8 @@
 	<LI>SECURITY: Fixed three buffer overflow issues when reading AFM files
 	and parsing page sizes.</LI>
 
+	<LI>Fixed incompatibility with Fortify's version of strcpy, which does not work properly with variable-length arrays (STR #235)</LI>
+
 	<LI>Fixed documentation errors (PR #6593, PR #6595)</LI>
 
 	<LI>Marked Zapf-Dingbats as a standard font (STR #198)</LI>
